fix(Header): do not break line and overlap the illustration

--- a/source/stylesheets/blocks/_hero.scss
+++ b/source/stylesheets/blocks/_hero.scss
@@ -85,7 +85,7 @@
 
       @media (max-width: 1024px) {
         max-width: 650px;
-        margin-right: -32px;
+        margin-right: 0;
       }
     }
   }
